# 1729w

./: .env.template  .gas-snapshot  .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  bid_essay_nft.sh  build.rs  create_sbt.sh  foundry.toml  init.sh  issue_sbt.sh  lcov.info  list_essay_nft.sh  mint_essay_nft.sh  package-lock.json  package.json  remappings.txt  slither.config.json
.github/workflows/: ci.yml  cucumber.yml  forge_test.yml  test.yml
files/: 1  1.md  test1
files/contribution-sbt/: 1  1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
files/essay-nft/: 0  0.md  1  1.json  1.md  10.json  10.md  2.json  2.md  3.json  3.md  4.json  4.md  5.json  5.md  6.json  6.md  7.json  7.md  8.json  8.md  9.json  9.md
files/essay-nft/cohort3/: 0_essay.json  0_visual.json  1_Stories-from-Network-State-Citizens.md  1_essay.json  1_visual.json  2_Barbell-Strategies-for-everyday-life.md  2_essay.json  2_visual.json  3_Aya.md  3_essay.json  3_visual.json  4_The-Most-Impactful-Startup-Society-In-The-World.md  4_essay.json  4_visual.json
script/: BidEssay.s.sol  CreateSBT.s.sol  DeploySBT.s.sol  IssueSBT.s.sol  IssueSBT1.s.sol  ListBidEssay.s.sol  ListEssay.s.sol  MintEssay.s.sol  commands.sh
src/: 1729Essay.sol  1729ProofOfContribution.sol  1729WritersCohort2.sol  Contract.sol  Fleece.sol  IProofOfContribution.sol  ISoulbound.sol  ProofOfContribution.sol  SBT.sol  SBTExample.sol  SevenTeenTwentyNineProofOfContribution.sol  flattened-1729Essay.sol  flattened-1729ProofOfContribution.sol  main.rs  zListerBidderSettler.sol
src/models/: Essay.sol
test/: 1729Essay.t.sol  1729ProofOfContribution.t.sol  Contract.t.sol  ERC721Spec.t.sol  Fixtures.sol  GenerateJson.t.sol  SBT.t.sol  zListerBidderSettler.t.sol
test/features/: determine_winning_essay.feature  issue_voter_proof_of_contribution.feature  issue_writer_proof_of_contribution.feature  pubilsh_essay_nft.feature  submit_essay.feature  vote_for_essay.feature
tests/: writers.rs
tests/features/: 1_deploy_smart_contracts.feature  2_apply_to_1729_writers.feature  3_submit_essay.feature  4_vote_for_essay.feature  5_determine_winning_essay.feature  6_publish_winning_essay.feature  7_issue_proof_of_contribution.feature  8_address_bad_behavior.feature  address_bad_behavior.feature  apply_to_writers_union.feature  deploy_smart_contracts.feature  determine_winning_essay.feature  issue_proof_of_contribution.feature  issue_voter_proof_of_contribution.feature  issue_writer_proof_of_contribution.feature  pubilsh_essay_nft.feature  publish_essay_nft.feature  submit_essay.feature  vote_for_essay.feature
tests/features/implemented/: 6_publish_winning_essay.feature  7_issue_proof_of_contribution.feature
tests/features/in_progress/: 1_deploy_smart_contracts.feature  3_submit_essay.feature  4_vote_for_essay.feature  5_determine_winning_essay.feature  7_issue_proof_of_contribution.feature  9_adjustable_royalty.feature
tests/unit/: 1729Essay.t.sol  1729ProofOfContribution.t.sol  Fixtures.sol  SBT.t.sol
