[package]
name = "w1729"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs" }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs" }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs" }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs" }
async-std = "1.12"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
async-trait = "0.1"
cucumber = { version="0.13", features = ["output-junit"] }
futures = "0.3"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs" }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs" }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs" }
eyre = "0.6"
fs = "0.0.5"


[[test]]
name = "writers" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
#ethers-contract = { git = "https://github.com/gakonst/ethers-rs" }